# mcp-on-streamlit

./: .env.example  README.md  client.py  pyproject.toml  server.py  servers.json  ui.py
